// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for {"alignLabel":"end","hideLabel":false,"stretch":false,"checked":false,"disabled":false,"loading":false,"theme":"light"} 1`] = `
":host {
  display: inline-flex;
  outline: 0 !important;
  gap: 8px !important;
  color-scheme: light dark !important;
  justify-content: flex-start !important;
  width: auto !important;
  vertical-align: top !important;
}
:host([hidden]) {
  display: none !important;
}
button {
  display: flex;
  align-items: center;
  flex-shrink: 0;
  width: 48px;
  height: 28px;
  box-sizing: border-box;
  border: 2px solid #6B6D70;
  border-radius: 14px;
  background-color: transparent;
  cursor: pointer;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  margin: 0;
  padding: 0;
  -webkit-appearance: none;
  appearance: none;
}
button::-moz-focus-inner {
  border: 0;
}
button:focus {
  outline: 0;
}
button:focus-visible {
  outline: 2px solid #1A44EA;
  outline-offset: 2px;
}
label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  min-width: 0;
  min-height: 0;
  cursor: pointer;
  color: #010205;
  order: 0;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  padding-top: 2px;
}
@media(hover:hover) {
  button:hover {
    border-color: #010205;
    background-color: transparent;
  }
  button:hover .toggle {
    background-color: #010205;
  }
}

.toggle {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 20px;
  height: 20px;
  border-radius: 50%;
  background-color: #010205;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), transform var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  transform: translate3d(2px, 0, 0);
}
.toggle:dir(rtl) {
  transform: translate3d(-2px, 0, 0);
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}"
`;

exports[`getComponentCss() should return correct css for {"alignLabel":"end","hideLabel":false,"stretch":false,"checked":false,"disabled":true,"loading":false,"theme":"light"} 1`] = `
":host {
  display: inline-flex;
  outline: 0 !important;
  gap: 8px !important;
  color-scheme: light dark !important;
  justify-content: flex-start !important;
  width: auto !important;
  vertical-align: top !important;
}
:host([hidden]) {
  display: none !important;
}
button {
  display: flex;
  align-items: center;
  flex-shrink: 0;
  width: 48px;
  height: 28px;
  box-sizing: border-box;
  border: 2px solid #949598;
  border-radius: 14px;
  background-color: transparent;
  cursor: not-allowed;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  margin: 0;
  padding: 0;
  -webkit-appearance: none;
  appearance: none;
}
button::-moz-focus-inner {
  border: 0;
}
button:focus {
  outline: 0;
}
button:focus-visible {
  outline: 2px solid #1A44EA;
  outline-offset: 2px;
}
label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  min-width: 0;
  min-height: 0;
  cursor: not-allowed;
  color: #949598;
  order: 0;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  padding-top: 2px;
}
.toggle {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 20px;
  height: 20px;
  border-radius: 50%;
  background-color: #949598;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), transform var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  transform: translate3d(2px, 0, 0);
}
.toggle:dir(rtl) {
  transform: translate3d(-2px, 0, 0);
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}"
`;

exports[`getComponentCss() should return correct css for {"alignLabel":"end","hideLabel":false,"stretch":true,"checked":false,"disabled":false,"loading":false,"theme":"light"} 1`] = `
":host {
  display: flex;
  outline: 0 !important;
  gap: 8px !important;
  color-scheme: light dark !important;
  justify-content: space-between !important;
  width: 100% !important;
}
:host([hidden]) {
  display: none !important;
}
button {
  display: flex;
  align-items: center;
  flex-shrink: 0;
  width: 48px;
  height: 28px;
  box-sizing: border-box;
  border: 2px solid #6B6D70;
  border-radius: 14px;
  background-color: transparent;
  cursor: pointer;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  margin: 0;
  padding: 0;
  -webkit-appearance: none;
  appearance: none;
}
button::-moz-focus-inner {
  border: 0;
}
button:focus {
  outline: 0;
}
button:focus-visible {
  outline: 2px solid #1A44EA;
  outline-offset: 2px;
}
label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  min-width: 0;
  min-height: 0;
  cursor: pointer;
  color: #010205;
  order: 0;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  padding-top: 2px;
}
@media(hover:hover) {
  button:hover {
    border-color: #010205;
    background-color: transparent;
  }
  button:hover .toggle {
    background-color: #010205;
  }
}

.toggle {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 20px;
  height: 20px;
  border-radius: 50%;
  background-color: #010205;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), transform var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  transform: translate3d(2px, 0, 0);
}
.toggle:dir(rtl) {
  transform: translate3d(-2px, 0, 0);
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}"
`;

exports[`getComponentCss() should return correct css for {"alignLabel":"end","hideLabel":false,"stretch":true,"checked":false,"disabled":false,"loading":true,"theme":"light"} 1`] = `
":host {
  display: flex;
  outline: 0 !important;
  gap: 8px !important;
  color-scheme: light dark !important;
  justify-content: space-between !important;
  width: 100% !important;
}
:host([hidden]) {
  display: none !important;
}
button {
  display: flex;
  align-items: center;
  flex-shrink: 0;
  width: 48px;
  height: 28px;
  box-sizing: border-box;
  border: 2px solid #949598;
  border-radius: 14px;
  background-color: transparent;
  cursor: not-allowed;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  margin: 0;
  padding: 0;
  -webkit-appearance: none;
  appearance: none;
}
button::-moz-focus-inner {
  border: 0;
}
button:focus {
  outline: 0;
}
button:focus-visible {
  outline: 2px solid #1A44EA;
  outline-offset: 2px;
}
label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  min-width: 0;
  min-height: 0;
  cursor: not-allowed;
  color: #949598;
  order: 0;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  padding-top: 2px;
}
.toggle {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 20px;
  height: 20px;
  border-radius: 50%;
  background-color: transparent;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), transform var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  transform: translate3d(2px, 0, 0);
}
.toggle:dir(rtl) {
  transform: translate3d(-2px, 0, 0);
}
.spinner {
  width: 28px;
  height: 28px;
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}"
`;

exports[`getComponentCss() should return correct css for {"alignLabel":"end","hideLabel":false,"stretch":true,"checked":false,"disabled":true,"loading":true,"theme":"dark"} 1`] = `
":host {
  display: flex;
  outline: 0 !important;
  gap: 8px !important;
  color-scheme: light dark !important;
  justify-content: space-between !important;
  width: 100% !important;
}
:host([hidden]) {
  display: none !important;
}
button {
  display: flex;
  align-items: center;
  flex-shrink: 0;
  width: 48px;
  height: 28px;
  box-sizing: border-box;
  border: 2px solid #7E7F82;
  border-radius: 14px;
  background-color: transparent;
  cursor: not-allowed;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  margin: 0;
  padding: 0;
  -webkit-appearance: none;
  appearance: none;
}
button::-moz-focus-inner {
  border: 0;
}
button:focus {
  outline: 0;
}
button:focus-visible {
  outline: 2px solid #1A44EA;
  outline-offset: 2px;
}
label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  min-width: 0;
  min-height: 0;
  cursor: not-allowed;
  color: #7E7F82;
  order: 0;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  padding-top: 2px;
}
.toggle {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 20px;
  height: 20px;
  border-radius: 50%;
  background-color: transparent;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), transform var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  transform: translate3d(2px, 0, 0);
}
.toggle:dir(rtl) {
  transform: translate3d(-2px, 0, 0);
}
.spinner {
  width: 28px;
  height: 28px;
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}"
`;

exports[`getComponentCss() should return correct css for {"alignLabel":"end","hideLabel":false,"stretch":true,"checked":false,"disabled":true,"loading":true,"theme":"light"} 1`] = `
":host {
  display: flex;
  outline: 0 !important;
  gap: 8px !important;
  color-scheme: light dark !important;
  justify-content: space-between !important;
  width: 100% !important;
}
:host([hidden]) {
  display: none !important;
}
button {
  display: flex;
  align-items: center;
  flex-shrink: 0;
  width: 48px;
  height: 28px;
  box-sizing: border-box;
  border: 2px solid #949598;
  border-radius: 14px;
  background-color: transparent;
  cursor: not-allowed;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  margin: 0;
  padding: 0;
  -webkit-appearance: none;
  appearance: none;
}
button::-moz-focus-inner {
  border: 0;
}
button:focus {
  outline: 0;
}
button:focus-visible {
  outline: 2px solid #1A44EA;
  outline-offset: 2px;
}
label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  min-width: 0;
  min-height: 0;
  cursor: not-allowed;
  color: #949598;
  order: 0;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  padding-top: 2px;
}
.toggle {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 20px;
  height: 20px;
  border-radius: 50%;
  background-color: transparent;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), transform var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  transform: translate3d(2px, 0, 0);
}
.toggle:dir(rtl) {
  transform: translate3d(-2px, 0, 0);
}
.spinner {
  width: 28px;
  height: 28px;
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}"
`;

exports[`getComponentCss() should return correct css for {"alignLabel":"end","hideLabel":false,"stretch":true,"checked":true,"disabled":false,"loading":false,"theme":"light"} 1`] = `
":host {
  display: flex;
  outline: 0 !important;
  gap: 8px !important;
  color-scheme: light dark !important;
  justify-content: space-between !important;
  width: 100% !important;
}
:host([hidden]) {
  display: none !important;
}
button {
  display: flex;
  align-items: center;
  flex-shrink: 0;
  width: 48px;
  height: 28px;
  box-sizing: border-box;
  border: 2px solid #197E10;
  border-radius: 14px;
  background-color: #197E10;
  cursor: pointer;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  margin: 0;
  padding: 0;
  -webkit-appearance: none;
  appearance: none;
}
button::-moz-focus-inner {
  border: 0;
}
button:focus {
  outline: 0;
}
button:focus-visible {
  outline: 2px solid #1A44EA;
  outline-offset: 2px;
}
label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  min-width: 0;
  min-height: 0;
  cursor: pointer;
  color: #010205;
  order: 0;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  padding-top: 2px;
}
@media(hover:hover) {
  button:hover {
    border-color: #0E4809;
    background-color: #0E4809;
  }
  button:hover .toggle {
    background-color: #FFF;
  }
}

.toggle {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 20px;
  height: 20px;
  border-radius: 50%;
  background-color: #FFF;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), transform var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  transform: translate3d(22px, 0, 0);
}
.toggle:dir(rtl) {
  transform: translate3d(-22px, 0, 0);
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}"
`;

exports[`getComponentCss() should return correct css for {"alignLabel":"left","hideLabel":false,"stretch":false,"checked":false,"disabled":false,"loading":false,"theme":"light"} 1`] = `
":host {
  display: inline-flex;
  outline: 0 !important;
  gap: 8px !important;
  color-scheme: light dark !important;
  justify-content: flex-start !important;
  width: auto !important;
  vertical-align: top !important;
}
:host([hidden]) {
  display: none !important;
}
button {
  display: flex;
  align-items: center;
  flex-shrink: 0;
  width: 48px;
  height: 28px;
  box-sizing: border-box;
  border: 2px solid #6B6D70;
  border-radius: 14px;
  background-color: transparent;
  cursor: pointer;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  margin: 0;
  padding: 0;
  -webkit-appearance: none;
  appearance: none;
}
button::-moz-focus-inner {
  border: 0;
}
button:focus {
  outline: 0;
}
button:focus-visible {
  outline: 2px solid #1A44EA;
  outline-offset: 2px;
}
label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  min-width: 0;
  min-height: 0;
  cursor: pointer;
  color: #010205;
  order: -1;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  padding-top: 2px;
}
@media(hover:hover) {
  button:hover {
    border-color: #010205;
    background-color: transparent;
  }
  button:hover .toggle {
    background-color: #010205;
  }
}

.toggle {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 20px;
  height: 20px;
  border-radius: 50%;
  background-color: #010205;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), transform var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  transform: translate3d(2px, 0, 0);
}
.toggle:dir(rtl) {
  transform: translate3d(-2px, 0, 0);
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}"
`;

exports[`getComponentCss() should return correct css for {"alignLabel":"right","hideLabel":false,"stretch":false,"checked":false,"disabled":false,"loading":false,"theme":"light"} 1`] = `
":host {
  display: inline-flex;
  outline: 0 !important;
  gap: 8px !important;
  color-scheme: light dark !important;
  justify-content: flex-start !important;
  width: auto !important;
  vertical-align: top !important;
}
:host([hidden]) {
  display: none !important;
}
button {
  display: flex;
  align-items: center;
  flex-shrink: 0;
  width: 48px;
  height: 28px;
  box-sizing: border-box;
  border: 2px solid #6B6D70;
  border-radius: 14px;
  background-color: transparent;
  cursor: pointer;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  margin: 0;
  padding: 0;
  -webkit-appearance: none;
  appearance: none;
}
button::-moz-focus-inner {
  border: 0;
}
button:focus {
  outline: 0;
}
button:focus-visible {
  outline: 2px solid #1A44EA;
  outline-offset: 2px;
}
label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  min-width: 0;
  min-height: 0;
  cursor: pointer;
  color: #010205;
  order: 0;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  padding-top: 2px;
}
@media(hover:hover) {
  button:hover {
    border-color: #010205;
    background-color: transparent;
  }
  button:hover .toggle {
    background-color: #010205;
  }
}

.toggle {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 20px;
  height: 20px;
  border-radius: 50%;
  background-color: #010205;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), transform var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  transform: translate3d(2px, 0, 0);
}
.toggle:dir(rtl) {
  transform: translate3d(-2px, 0, 0);
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}"
`;

exports[`getComponentCss() should return correct css for {"alignLabel":"start","hideLabel":true,"stretch":false,"checked":false,"disabled":false,"loading":false,"theme":"light"} 1`] = `
":host {
  display: inline-flex;
  outline: 0 !important;
  gap: 8px !important;
  color-scheme: light dark !important;
  justify-content: flex-start !important;
  width: auto !important;
  vertical-align: top !important;
}
:host([hidden]) {
  display: none !important;
}
button {
  display: flex;
  align-items: center;
  flex-shrink: 0;
  width: 48px;
  height: 28px;
  box-sizing: border-box;
  border: 2px solid #6B6D70;
  border-radius: 14px;
  background-color: transparent;
  cursor: pointer;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  margin: 0;
  padding: 0;
  -webkit-appearance: none;
  appearance: none;
}
button::-moz-focus-inner {
  border: 0;
}
button:focus {
  outline: 0;
}
button:focus-visible {
  outline: 2px solid #1A44EA;
  outline-offset: 2px;
}
label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  min-width: 0;
  min-height: 0;
  cursor: pointer;
  color: #010205;
  order: -1;
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@media(hover:hover) {
  button:hover {
    border-color: #010205;
    background-color: transparent;
  }
  button:hover .toggle {
    background-color: #010205;
  }
}

.toggle {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 20px;
  height: 20px;
  border-radius: 50%;
  background-color: #010205;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), transform var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  transform: translate3d(2px, 0, 0);
}
.toggle:dir(rtl) {
  transform: translate3d(-2px, 0, 0);
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}"
`;

exports[`getComponentCss() should return correct css for {"alignLabel":{"base":"start","xs":"end","s":"start","m":"end","l":"start","xl":"end"},"hideLabel":{"base":true,"xs":false,"s":true,"m":false,"l":true,"xl":false},"stretch":{"base":false,"xs":true,"s":false,"m":true,"l":false,"xl":true},"checked":false,"disabled":false,"loading":false,"theme":"light"} 1`] = `
":host {
  display: inline-flex;
  outline: 0 !important;
  gap: 8px !important;
  color-scheme: light dark !important;
  justify-content: flex-start !important;
  width: auto !important;
  vertical-align: top !important;
}
:host([hidden]) {
  display: none !important;
}
button {
  display: flex;
  align-items: center;
  flex-shrink: 0;
  width: 48px;
  height: 28px;
  box-sizing: border-box;
  border: 2px solid #6B6D70;
  border-radius: 14px;
  background-color: transparent;
  cursor: pointer;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  margin: 0;
  padding: 0;
  -webkit-appearance: none;
  appearance: none;
}
button::-moz-focus-inner {
  border: 0;
}
button:focus {
  outline: 0;
}
button:focus-visible {
  outline: 2px solid #1A44EA;
  outline-offset: 2px;
}
label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  min-width: 0;
  min-height: 0;
  cursor: pointer;
  color: #010205;
  order: -1;
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@media(min-width:480px) {
  :host {
    justify-content: space-between !important;
    width: 100% !important;
  }
  label {
    order: 0;
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
    padding-top: 2px;
  }
}

@media(min-width:760px) {
  :host {
    justify-content: flex-start !important;
    width: auto !important;
    vertical-align: top !important;
  }
  label {
    order: -1;
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }
}

@media(min-width:1000px) {
  :host {
    justify-content: space-between !important;
    width: 100% !important;
  }
  label {
    order: 0;
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
    padding-top: 2px;
  }
}

@media(min-width:1300px) {
  :host {
    justify-content: flex-start !important;
    width: auto !important;
    vertical-align: top !important;
  }
  label {
    order: -1;
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }
}

@media(min-width:1760px) {
  :host {
    justify-content: space-between !important;
    width: 100% !important;
  }
  label {
    order: 0;
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
    padding-top: 2px;
  }
}

@media(hover:hover) {
  button:hover {
    border-color: #010205;
    background-color: transparent;
  }
  button:hover .toggle {
    background-color: #010205;
  }
}

.toggle {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 20px;
  height: 20px;
  border-radius: 50%;
  background-color: #010205;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), transform var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  transform: translate3d(2px, 0, 0);
}
.toggle:dir(rtl) {
  transform: translate3d(-2px, 0, 0);
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}"
`;
